# aiogram_bot_skelet

./: .env.example  README.md  admin.dockerfile  backend.dockerfile  docker-compose.yaml
app/: pyproject.toml
app/app/: loader.py  logger.py  main.py
app/app/admin/: app.py  pyproject.toml
app/app/admin/templates/: my_master.html
app/app/admin/templates/admin/: index.html
app/app/core/: config.py  container.py
app/app/db/: base_class.py  session.py
app/app/middlewares/: __init__.py
app/app/repository/: base.py
nginx/local/: nginx.conf
