[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0" 
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
httpx = "^0.22.0"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
redis = "^4.1.4"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
asyncpg = "^0.25.0"
aio-pika = "^7.1.2"
humps = "^0.2.2"
celery = "^5.2.6"
rollbar = "^0.16.2"
pytest-httpx = "^0.20.0"
dependency-injector = "^4.39.1"
aiogram = "^2.21"
aioredis = "^2.0.1"
aiofiles = "^0.8.0"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
Flask-Security = "^3.0.0"
bit = "^0.8.0"
blockcypher = "^1.0.93"
bitcoin = "1.1.39"
base58 = "^2.1.1"
loguru = "^0.6.0"
watchdog = "^2.1.9"
web3 = "^5.30.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.1.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
pytest-httpx = "^0.20.0"
watchdog = "^2.1.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

api_pims = { git = "git@gitlab.inlb.ru:inlb/python/pims-api-client.git", branch = "master" }
